--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -1,6 +1,12 @@
 {% extends 'main.html' %}
-
 {% block content %}
-<h1> This is List of Projects </h1>
-<p>{{projectobj.id}} - {{projectobj.name}}</p>
+
+<hr>
+<h1> Projects </h1>
+<ul>
+    {% for project in projects %}
+    <li> Title: <a href="{% url 'project' project.id %}">{{project.title}}</a> ------ {{project.description}}</li>
+    {% endfor %}
+</ul>
+
 {% endblock content%}
