--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -1,23 +1,9 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h1> This is my of Projects </h1>
-{% if number > 10%}
-<p> Number is greater then 10 </p>
-{% elif number == 10%}
-<p> Number is exactly 10</p>
-{% else %}
-<p> Number is less than 10</p>
-{%endif%}
-
+<h1>{{project.title}} </h1>
 <hr>
-
-<h1> Projects </h1>
-<ul>
-    {% for project in projects %}
-    <li> Title: <a href="{% url 'project' project.id %}">{{project.name}}</a> ------ {{project.description}}</li>
-    {% endfor %}
-</ul>
+{% for tag in tags%}
+    <span > </span>
 
 {% endblock content%}
-
